Phase 2/test/test_11912908_2.out
Error type 3 at Line 9: redefine variable: gg
Error type 10 at Line 11: indexing on non-array variable