Phase 2/test/test_11912908_2.spl
struct Girl
{
  int name;
  int height;
};
int test_2_r14()
{
  struct Girl gg;
  struct Girl gg;
  gg.name = 1;
  gg.height[2] = 165;
  return 0;
}